# kyrsach_OOP

./: 123.csv  CMakeLists.txt  Doxyfile  List_zadania_OOP_1-6_gruppy.odt  README.md  TECHNICAL_REQUIREMENTS_COMPLIANCE.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  chartwindow.cpp  chartwindow.h  chartwindow.ui  comboboxdelegate.cpp  comboboxdelegate.h  datedelegate.cpp  datedelegate.h  equip.txt  equipment.txt  equipmentdialog.cpp  equipmentdialog.h  equipmentdialog.ui  equipmentmodel.cpp  equipmentmodel.h  equipmentrecord.cpp  equipmentrecord.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pr-oftech-main.pro  readme.md  readme2.md  settings.cpp  settings.h
doc/rtf/: .~lock.refman.rtf#  refman.rtf
translations/: office_equipment_en.ts  office_equipment_es.ts  office_equipment_ru.ts
